--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           port: 22
           script: |
             # Definir directorio del proyecto
-            PROJECT_DIR="/var/www/html/apielectoral"
+            PROJECT_DIR="/var/www/html/apielectoral/"
             
             # Verificar que el directorio existe
             if [ ! -d "$PROJECT_DIR" ]; then
@@ -42,6 +42,14 @@ jobs:
               echo "❌ Error: Not a git repository"
               exit 1
             fi
+            
+            # Configurar git safe.directory para evitar error de ownership
+            git config --global --add safe.directory "$PROJECT_DIR"
+            echo "✅ Git safe directory configured"
+            
+            # Verificar y corregir permisos del directorio
+            sudo chown -R ubuntu:ubuntu "$PROJECT_DIR"
+            echo "✅ Directory ownership corrected"
             
             # Hacer backup del .env si existe
             if [ -f .env ]; then
@@ -61,15 +69,34 @@ jobs:
               echo "✅ Restored .env file"
             fi
             
+            # Limpiar venv corrupto si existe
+            if [ -d venv ] && [ ! -f venv/bin/activate ]; then
+              echo "🗑️  Removing corrupted venv..."
+              rm -rf venv
+            fi
+            
             # Crear virtual environment si no existe
             if [ ! -d venv ]; then
               echo "📦 Creating virtual environment..."
               python3 -m venv venv
+              if [ $? -ne 0 ]; then
+                echo "❌ Failed to create venv, trying with sudo..."
+                sudo python3 -m venv venv
+                sudo chown -R ubuntu:ubuntu venv
+              fi
+            fi
+            
+            # Verificar que venv se creó correctamente
+            if [ ! -f venv/bin/activate ]; then
+              echo "❌ Virtual environment activation script not found"
+              exit 1
             fi
             
             # Activar entorno virtual
             source venv/bin/activate
             echo "✅ Virtual environment activated"
+            echo "   Python: $(which python)"
+            echo "   Pip: $(which pip)"
             
             # Actualizar pip
             pip install --upgrade pip
