--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,212 +24,32 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: 22
           script: |
-            set -e  # Exit on error
+            set -e
             
-            echo "═══════════════════════════════════════════════════════"
-            echo "🚀 FastAPI Deployment Started"
-            echo "═══════════════════════════════════════════════════════"
-            echo ""
+            PROJECT_DIR="/var/www/html/apielectoral"
             
-            # Variables
-            PROJECT_DIR="/var/www/html/apielectoral/"
-            APP_NAME="api-electoral"
-            VENV_PATH="$PROJECT_DIR/venv"
-            UVICORN_CMD="$VENV_PATH/bin/uvicorn"
-            APP_MODULE="api:app"
-            HOST="0.0.0.0"
-            PORT="8000"
-            WORKERS="2"
+            echo "🚀 Starting deployment..."
             
-            # 1. Validar directorio del proyecto
-            echo "📁 Step 1: Validating project directory..."
+            # Ensure project directory exists
             if [ ! -d "$PROJECT_DIR" ]; then
               echo "❌ Error: Directory $PROJECT_DIR does not exist"
               exit 1
             fi
+            
             cd "$PROJECT_DIR"
-            echo "   ✅ Working directory: $(pwd)"
             
-            # 2. Configurar Git
-            echo ""
-            echo "🔧 Step 2: Configuring Git..."
-            if [ ! -d .git ]; then
-              echo "❌ Error: Not a git repository"
-              exit 1
-            fi
+            # Configure git
             git config --global --add safe.directory "$PROJECT_DIR"
-            echo "   ✅ Git configured"
             
-            # 3. Corregir permisos
-            echo ""
-            echo "🔐 Step 3: Setting permissions..."
+            # Fix permissions
             sudo chown -R ubuntu:ubuntu "$PROJECT_DIR"
-            echo "   ✅ Permissions set to ubuntu:ubuntu"
             
-            # 4. Backup y actualizar código
-            echo ""
-            echo "📥 Step 4: Updating code from repository..."
-            if [ -f .env ]; then
-              cp .env .env.backup
-              echo "   ✅ .env backed up"
-            fi
+            # Make deploy script executable
+            chmod +x deploy.sh
             
-            git pull origin main || git pull origin master
-            echo "   ✅ Code updated"
-            
-            if [ -f .env.backup ]; then
-              cp .env.backup .env
-              echo "   ✅ .env restored"
-            elif [ ! -f .env ] && [ -f .env.example ]; then
-              echo "   ⚠️  .env not found, please configure it"
-            fi
-            
-            # 5. Configurar Python y Virtual Environment
-            echo ""
-            echo "🐍 Step 5: Setting up Python environment..."
-            
-            # Verificar python3-venv
-            if ! dpkg -l | grep -q python3.*-venv; then
-              echo "   Installing python3-venv..."
-              sudo apt update -qq
-              sudo apt install -y python3-venv python3-full python3-pip
-            fi
-            
-            # Limpiar venv corrupto
-            if [ -d "$VENV_PATH" ] && [ ! -f "$VENV_PATH/bin/activate" ]; then
-              echo "   Removing corrupted venv..."
-              rm -rf "$VENV_PATH"
-            fi
-            
-            # Crear venv si no existe
-            if [ ! -d "$VENV_PATH" ]; then
-              echo "   Creating virtual environment..."
-              python3 -m venv "$VENV_PATH"
-              if [ $? -ne 0 ]; then
-                sudo apt update -qq
-                sudo apt install -y python3-venv python3-full python3-pip
-                python3 -m venv "$VENV_PATH"
-              fi
-            fi
-            
-            # Verificar venv
-            if [ ! -f "$VENV_PATH/bin/activate" ]; then
-              echo "❌ Failed to create virtual environment"
-              exit 1
-            fi
-            
-            # Activar venv
-            source "$VENV_PATH/bin/activate"
-            echo "   ✅ Virtual environment activated"
-            echo "      Python: $(python --version)"
-            echo "      Location: $(which python)"
-            
-            # 6. Instalar dependencias
-            echo ""
-            echo "📦 Step 6: Installing dependencies..."
-            pip install --upgrade pip -q
-            pip install -r requirements.txt -q
-            echo "   ✅ Dependencies installed"
-            
-            # 7. Gestionar aplicación
-            echo ""
-            echo "🔄 Step 7: Managing application..."
-            
-            # Verificar si existe servicio systemd
-            if sudo systemctl list-unit-files | grep -q "$APP_NAME.service"; then
-              echo "   Using systemd service..."
-              sudo systemctl restart "$APP_NAME"
-              sleep 3
-              if sudo systemctl is-active --quiet "$APP_NAME"; then
-                echo "   ✅ Service restarted successfully"
-                sudo systemctl status "$APP_NAME" --no-pager -l
-              else
-                echo "   ❌ Service failed to start"
-                sudo journalctl -u "$APP_NAME" -n 50 --no-pager
-                exit 1
-              fi
-            else
-              echo "   ⚠️  Systemd service not found, using manual start"
-              
-              # Detener procesos existentes de forma limpia
-              if pgrep -f "uvicorn.*$APP_MODULE" > /dev/null; then
-                echo "   Stopping existing uvicorn process..."
-                OLD_PID=$(pgrep -f "uvicorn.*$APP_MODULE")
-                echo "   Old PID: $OLD_PID"
-                
-                # Intentar SIGTERM primero (graceful shutdown)
-                pkill -15 -f "uvicorn.*$APP_MODULE" 2>/dev/null || true
-                sleep 3
-                
-                # Si sigue corriendo, usar SIGKILL
-                if pgrep -f "uvicorn.*$APP_MODULE" > /dev/null; then
-                  echo "   Process still running, forcing kill..."
-                  pkill -9 -f "uvicorn.*$APP_MODULE" 2>/dev/null || true
-                  sleep 2
-                fi
-                
-                echo "   ✅ Old process stopped"
-              fi
-              
-              # Iniciar uvicorn en background completamente desacoplado
-              echo "   Starting uvicorn..."
-              cd "$PROJECT_DIR"
-              
-              # Crear script temporal para iniciar uvicorn
-              echo '#!/bin/bash' > /tmp/start_uvicorn.sh
-              echo "cd $PROJECT_DIR" >> /tmp/start_uvicorn.sh
-              echo 'source venv/bin/activate' >> /tmp/start_uvicorn.sh
-              echo "exec venv/bin/uvicorn $APP_MODULE --host $HOST --port $PORT --workers $WORKERS --log-level info >> uvicorn.log 2>&1" >> /tmp/start_uvicorn.sh
-              
-              chmod +x /tmp/start_uvicorn.sh
-              
-              # Iniciar con nohup y setsid para desacoplar completamente
-              nohup setsid /tmp/start_uvicorn.sh > /dev/null 2>&1 &
-              
-              # Esperar a que inicie
-              echo "   Waiting for application to start..."
-              sleep 8
-              
-              # Verificar proceso
-              if pgrep -f "uvicorn.*$APP_MODULE" > /dev/null; then
-                PID=$(pgrep -f "uvicorn.*$APP_MODULE")
-                echo "   ✅ Uvicorn started (PID: $PID)"
-                
-                # Verificar que el puerto está escuchando
-                if netstat -tuln 2>/dev/null | grep -q ":$PORT " || ss -tuln 2>/dev/null | grep -q ":$PORT "; then
-                  echo "   ✅ Port $PORT is listening"
-                else
-                  echo "   ⚠️  Port $PORT not listening yet"
-                fi
-              else
-                echo "   ❌ Failed to start uvicorn"
-                echo "   Last 30 lines of log:"
-                tail -30 "$PROJECT_DIR/uvicorn.log" 2>/dev/null || echo "   (log not found)"
-                exit 1
-              fi
-              
-              # Limpiar script temporal
-              rm -f /tmp/start_uvicorn.sh
-            fi
-            
-            # 8. Verificar API
-            echo ""
-            echo "🔍 Step 8: Testing API endpoint..."
-            sleep 3
-            
-            if curl -f -s http://localhost:$PORT/balance > /dev/null 2>&1; then
-              echo "   ✅ API is responding on port $PORT"
-              RESPONSE=$(curl -s http://localhost:$PORT/balance)
-              echo "   Response: $RESPONSE"
-            else
-              echo "   ⚠️  API not responding yet"
-              echo "   This is normal, it may need more time to initialize"
-            fi
-            
-            echo ""
-            echo "═══════════════════════════════════════════════════════"
-            echo "✅ Deployment completed successfully!"
-            echo "═══════════════════════════════════════════════════════"
+            # Execute deployment script
+            echo "📦 Executing deployment script..."
+            bash deploy.sh
 
       - name: Health Check
         run: |
