--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Deploy to VPS via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: 158.69.113.159
-          username: ubuntu
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: 22
+          port: ${{ secrets.VPS_PORT }}
           script: |
             set -e
             
@@ -43,6 +43,11 @@ jobs:
             
             # Fix permissions
             sudo chown -R ubuntu:ubuntu "$PROJECT_DIR"
+            
+            # Pull latest changes
+            echo "📥 Pulling latest changes from repository..."
+            git pull origin main || git pull origin master
+            echo "✅ Code updated"
             
             # Make deploy script executable
             chmod +x deploy.sh
